# transaction_risk_service

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  runner.py  settings.toml  versions.txt
app/: __init__.py  main.py
app/api/: __init__.py  accounts.py  auth.py  tests_router.py  transactions.py
app/core/: app.py  config.py  db.py  enums.py  logger.py  security.py
app/crud/: user.py
app/databases/: __init__.py  accounts.py  base_crud.py  transactions.py  users.py
app/models/: accounts.py  base_model.py  db_helper.py  transactions.py  user.py  users.py
app/routes/: __init__.py  auth.py  protected.py
app/schemas/: __init__.py  accounts.py  token_schema.py  transactions.py  user_schema.py  users.py
app/security/: auth.py  core.py  dependencies.py
app/services/: accounts.py  auth.py  auth_service.py  risk_analysis.py  transactions.py
frontend/: index.html
frontend/styles/: main.css
